force-app/main/default/objects/Opportunity/fields/Additional_Grant_Investigator_User__c.field-meta.xml
<CustomField>
    <fullName>Additional_Grant_Investigator_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the User object, to replace the Contact lookup, now that Program Officers are joining Salesforce</description>
    <inlineHelpText>If there was a secondary investigator who was equally involved in the grant approval request, list here.</inlineHelpText>
    <label>Additional Grant Investigator User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Additional_Grant_Investigator_For</relationshipName>
    <type>Lookup</type>
</CustomField>