force-app/main/default/objects/Opportunity/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <description>The OpenPhil focus area(s) associated with this Opportunity.</description>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Focus_Area</valueSetName>
    </valueSet>
</CustomField>