force-app/main/default/objects/Opportunity/fields/Grant_Investigator_User__c.field-meta.xml
<CustomField>
    <fullName>Grant_Investigator_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the User object, to replace the Contact lookup, now that Program Officers are joining Salesforce</description>
    <inlineHelpText>The primary investigator for this recommendation (usually the person who submits the approval request and/or writes the write-up).</inlineHelpText>
    <label>Grant Investigator User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grant_Investigator_For</relationshipName>
    <type>Lookup</type>
</CustomField>