force-app/main/default/objects/Opportunity/fields/Mapping_Override_Address__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Override_Address__c</fullName>
    <description>For visualizing grant locations on a map, if the Account Billing Address should not be used, specify the information to be mapper here.  You may enter a partial address (i.e., only country, or only city) if that&apos;s all you know.</description>
    <inlineHelpText>For visualizing grant locations on a map, if the Account Billing Address should not be used, specify the information to be mapper here.  You may enter a partial address (i.e., only country, or only city) if that&apos;s all you know.</inlineHelpText>
    <label>Mapping Override Address</label>
    <type>Address</type>
</CustomField>