force-app/main/default/objects/Opportunity/fields/Mapping_Override_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Override_Geolocation__c</fullName>
    <label>Mapping Override Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>