force-app/main/default/objects/Opportunity/fields/Rec_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Rec_Submitted__c</fullName>
    <label>Rec Submitted</label>
    <type>Date</type>
</CustomField>